--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,6 +13,7 @@ body {
 .App {
   height: 100%;
   width: 100%;
+  background-image: url(../images/background.png);
   padding: 10px;
   display: grid;
   grid-template-rows: 80px 1fr 30px;
