--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,29 @@
+@media screen and (min-width: 0px) and (max-width: 849px) {
+  .playGround {
+    width: 650px;
+  }
+}
+
+@media screen and (min-width: 850px) and (max-width: 1199px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .playGround {
+    width: 850px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .playGround {
+    width: 1200px;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -43,20 +69,20 @@ body {
 
 .mainSection {
   display: grid;
-  grid-template-columns: minmax(700px, 900px);
+  grid-template-columns: auto;
   justify-content: center;
   align-items: center;
 }
 
 .playGround {
   height: 100%;
-  width: 100%;
   padding: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 160px));
-  grid-auto-rows: 230px;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 150px));
+  grid-auto-rows: 200px;
   justify-content: center;
   align-content: center;
+  justify-self: center;
   gap: 35px;
 }
 
