--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik&family=Skranji&display=swap");
+
 @media screen and (min-width: 0px) and (max-width: 849px) {
   .playGround {
     width: 650px;
@@ -33,6 +35,8 @@
 body {
   min-height: 100vh;
   font-size: 1rem;
+  font-family: "Rubik", sans-serif;
+  color: #c2c2c2;
   display: grid;
 }
 
@@ -44,10 +48,12 @@ body {
   display: grid;
   grid-template-rows: 80px 1fr 30px;
   text-align: center;
+  gap: 10px;
   flex: 1;
 }
 
 .header {
+  color: #66ff00;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
@@ -61,10 +67,10 @@ body {
 }
 
 .scoreBoard {
-  display: flex;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
   justify-content: flex-end;
   align-items: center;
-  gap: 20px;
 }
 
 .mainSection {
@@ -92,12 +98,21 @@ body {
   align-items: center;
 }
 
-.header span {
+.title span {
   font-size: 1.5rem;
+  color: #c2c2c2;
+}
+
+.scoreBoard p {
+  width: 125px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .scoreBoard span {
-  color: #b30000;
+  font-size: 1.25rem;
+  color: #ff0000;
 }
 
 p {
