--- a/src/styles/Cards.css
+++ b/src/styles/Cards.css
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Basic&display=swap");
+
 .card {
   height: 200px;
   width: 150px;
   position: relative;
+  font-family: "Basic", sans-serif;
+  font-weight: 500;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 1px rgba(65, 177, 44, 0.5);
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +29,10 @@ img {
   width: 100%;
   position: absolute;
   bottom: 0px;
-  padding: 10px;
+  border-radius: 0px 0px 10px 10px;
+  background-color: rgba(0, 154, 15, 0.9);
+  line-height: 1;
+  padding: 8px;
   pointer-events: none;
 }
 
